initial creation of backend for application.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost/TimeOMat?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=IMA16_xxx
+spring.datasource.url=jdbc:mysql://localhost/Delorian?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.userName=IMA16_xxx
 spring.datasource.password=theAwesomePassword
+
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #Limit the db connections
 spring.datasource.dbcp2.initial-size=1
