--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
+    "ngx-bootstrap": "^3.1.3",
+    "ngx-select-ex": "^3.6.8",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
