--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,14 @@
     "@angular/router": "~7.0.0",
     "@auth0/angular-jwt": "^2.1.0",
     "bootstrap": "^4.2.1",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.1.3",
     "ngx-select-ex": "^3.6.8",
+    "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
+    "saucelabs": "^1.5.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -33,6 +37,7 @@
     "@angular/cli": "~7.0.5",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
+    "@types/d3": "^5.5.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
