--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^4.2.1",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.0.2",
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.1.3",
     "ngx-select-ex": "^3.6.8",
