--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -31,7 +31,8 @@
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.scss",
               "src/assets/bootstrap/bootstrap.css",
-              "src/assets/bootstrap/_variables.scss"
+              "src/assets/bootstrap/_variables.scss",
+              "./node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [
             ]
