--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
+    "@angular/animations": "^7.0.4",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
@@ -29,9 +29,11 @@
     "ng2-charts": "^1.6.0",
     "ngx-bootstrap": "^3.1.3",
     "ngx-select-ex": "^3.6.8",
+    "ngx-toastr": "^9.1.1",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "saucelabs": "^1.5.0",
+    "toastr": "^2.1.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
