--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.0.2",
     "ng2-charts": "^1.6.0",
+    "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.1.3",
     "ngx-select-ex": "^3.6.8",
     "ngx-toastr": "^9.1.1",
