--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,7 +2,7 @@
 !.mvn/wrapper/maven-wrapper.jar
 src/main/resources/application.properties
 /src/main/resources/application.properties
-
+/uploads
 ### STS ###
 .apt_generated
 .classpath
